tests/baselines/reference/specializedOverloadWithRestParameters.errors.txt
==== tests/cases/compiler/specializedOverloadWithRestParameters.ts (2 errors) ====
    class Base { foo() { } }
    class Derived1 extends Base { bar() { } }
    function f(tagName: 'span', ...args): Derived1;   // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! specializedOverloadWithRestParameters.ts(3,1): error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
    function f(tagName: number, ...args): Base;
    function f(tagName: any): Base {
        return null;
    }
    function g(tagName: 'span', arg): Derived1;    // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! specializedOverloadWithRestParameters.ts(8,1): error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
    function g(tagName: number, arg): Base;
    function g(tagName: any): Base {
        return null;
    }